--- a/notes/os_from_0_to_1.org
+++ b/notes/os_from_0_to_1.org
@@ -4,7 +4,7 @@ https://github.com/tuhdo/os01/tree/master
 
 * Pre-reading
 http://www.allaboutcircuits.com/textbook/, chapter 1 and chapter 2
-** TODO Basic concepts elec.: atoms, electrons, protons, neutrons, cur. flow
+** DONE (Mostly) Basic concepts elec.: atoms, electrons, protons, neutrons, cur. flow
 *** electron 
 - smallest known carrier of electric charge. ~1.6 * 10⁻¹⁹ C (coulombs)
 - coulomb = unit of electrical charge, force generated between point charges.
@@ -89,7 +89,7 @@ voltage (potential energy per unit charge) between different sets of points
 in a single circuit may vary considerably.
 
 *** TODO Semi-conductors, diodes
-** TODO Review Ohm's law
+** DONE Review Ohm's law
 - Current : Continuous movement of electric charge through the conductors of a circuit is called a current
 - Voltage : Force motivating charge carriers to "flow"/move
 | Quantity   | Symbol | Unit of measurement | Unit Abbreviation |
@@ -118,3 +118,28 @@ by a low-temperature welding process called “soldering.”
 - Devices called resistors are built to provide precise amounts of resistance in
 electric circuits. Resistors are rated both in terms of their resistance (ohms)
 and their ability to dissipate heat energy (watts).
+* 1. Domain documents
+** 1.2.1 Software requirement document
+Software requirement document includes both a list of requirements and
+a description of the problem domain.
+A good way to test the quality of a require-
+ment document is to provide it to a domain expert for proofreading,
+to ensure he can understand the material thoroughly.
+
+** 1.2.2 Software Specification document
+Software specification document states rules relating desired behavior of
+the output devices to all possible behavior of the input devices, as well
+as any rules that other parts of the problem domain must obey.
+Only concerns interface design.
+
+** 1.3 Documents for writing an x86 OS
+- Intel® 64 and IA-32 Architectures Software Developer’s Manual (Volume 1, 2, 3)
+- Intel® 3 Series Express Chipset Family Datasheet
+- System V Application Binary Interface
+Intel documents divide the requirement and specification sections clearly,
+but call the sections with different names. The corresponding to the requirement
+document is a section called “Functional Description”, which consists mostly of 
+domain description; for specification, “Register Description” section describes 
+all programming interfaces.
+
+* 2. From hardware to software: Layers of abstraction
